facet-json/tests/snapshots/r#mod__integration__err__deserialize_tuple_wrong_size_one_too_many.snap
---
source: facet-json/tests/integration/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:5 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[31m2[0m[31m0[0m[38;5;249m][0m
 [38;5;240m  │[0m     [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m      [31m╰[0m[31m─[0m[31m─[0m Field error for shape [31m(i32)[39m: No such field
[38;5;246m───╯[0m
